# usage-cli

./: .gitignore  CHANGELOG.en.md  CHANGELOG.md  LICENSE  README.en.md  README.md  codex_loader.py  history_loader.py  i18n.json  main.py  menubar.py  pricing.py  pyproject.toml  setup_app.py  setup_hook.py  tui.py  usage_rate.py
.github/workflows/: check.yml  release.yml
assets/panels/: classic.html  newspaper.html
panels/: __init__.py  web_panel.py
tests/: test_antigravity_loader.py  test_history_loader.py  test_main.py  test_menubar.py  test_panels.py  test_pricing.py  test_usage_rate.py
usage-cli/: README.md  go.mod  main.go  main_test.go
