[project]
name = "usage"
version = "0.1.8"
description = "usage — 在 macOS menu bar 顯示 Claude Code 用量的繁中小工具（也提供終端機 TUI）"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyobjc-framework-Cocoa>=11.0",
    "rich>=14.0.0,<15.0.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "main",
    "menubar",
    "tui",
    "pricing",
    "history_loader",
    "usage_rate",
    "usag_statusline",
    "setup_hook",
    "usage_client",
    "codex_loader",
    "clawd_sprite",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "mypy>=1.10",
    "pytest>=8",
    "pytest-cov>=5",
]
build = [
    "py2app>=0.28",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
pretty = true
exclude = "^(build|dist)/"

[[tool.mypy.overrides]]
module = "rich.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
